<resources>
    <string name="app_name">SaveUserApp</string>


    <string name="hint_name">Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>

    <string name="btn_save">Save</string>
    <string name="name_error">Please enter a name</string>
    <string name="address_error">Please enter a address</string>
    <string name="phone_error">Please enter a phone</string>
    <string name="email_error">Please enter a email</string>
</resources>